# qgis-plugin-transifex-ci

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
qgis_plugin_transifex_ci/: client.py  logger.py  main.py  parameters.py  translation.py
requirements/: tests.txt
tests/: .gitignore  test_cli.py  test_parameters.py
tests/fixtures/: .qgis-transifex-ci.toml  pyproject.toml
tests/fixtures/plugin_ci_testing/: metadata.txt  qgis_plugin_ci_testing_plugin.py  resources_rc.py
